<resources>
    <string name="app_name">TheaterApp</string>
    <string name="back">back</string>
    <string name="theatre_information">Theatre Information</string>
    <string name="location">Location</string>
    <string name="phone">phone</string>
    <string name="my_tickets">My Tickets</string>
    <string name="there_are_no_tickets">There are no tickets</string>
    <string name="let_s_go_theater">LET\'S GO... THEATER</string>
    <string name="_10_3_2025">10/3/2025</string>
    <string name="my_tickets_capital">MY TICKETS</string>
    <string name="book_a_ticket">BOOK A TICKET</string>
    <string name="program">PROGRAM</string>
    <string name="complains">COMPLAINS</string>
    <string name="information">INFORMATION</string>
    <string name="theater_program">Theater Program</string>
    <string name="photo">photo</string>
    <string name="ticket_price">Ticket price: 20€</string>
    <string name="logo_photo">logo photo</string>
    <string name="my_wallet">My Wallet</string>
    <string name="balance">Balance:</string>
    <string name="iban">IBAN:</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">withdraw</string>
    <string name="deposit_50">Deposit (ex. 50)</string>
    <string name="withdraw_20">Withdraw (ex. 20)</string>
    <string name="wallet">wallet</string>
    <string name="write_something">write something</string>
    <string name="if_you_choose_to_return_the_tickets_the_money_will_be_deposited_in_your_virtual_wallet">If you choose to return the tickets, the money will be deposited in your virtual wallet.</string>
    <string name="cancellation">cancellation</string>
    <string name="ticket_cancel">Ticket Cancel</string>
    <string name="cancel">cancel</string>
    <string name="type_your_message">Type your message...</string>
    <string name="send">Send</string>
    <string name="chatbot_icon">chatbot icon</string>
    <string name="chat_box">Chat Bot</string>
    <string name="ask_theater_bot">Ask Theater Bot</string>
    <string name="ticket_cost">ticket cost</string>
    <string name="myticket">myticket</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="duration">duration</string>
    <string name="theaterroom">theaterRoom</string>
    <string name="type">type</string>
    <string name="there_are_no_performances">there are no performances</string>
    <string name="box_office_hours">Box Office Hours:</string>
    <string name="email">email</string>
    <string name="mon_fri_10am_6pm_nsat_sun_12pm_8pm">Mon–Fri: 10am – 10pm\nSat–Sun: 12pm – 10pm</string>
    <string name="chatbot">chatbot</string>
</resources>