<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFCFD5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/curtains"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.152">


        <ImageButton
            android:id="@+id/Wallet"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#CFCFD5"
            android:contentDescription="@string/wallet"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/my_w"
            android:layout_marginBottom="12dp"
            tools:ignore="RtlHardcoded" />

        <Space
            android:layout_width="20dp"
            android:layout_height="30dp" />

        <ImageButton
            android:id="@+id/MyTicket"
            android:layout_width="100dp"
            android:layout_height="95dp"
            android:background="#CFCFD5"
            android:contentDescription="@string/myticket"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/mtickets"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="212dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.112"
        tools:layout_editor_absoluteX="16dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookTicket"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/book_a_ticket"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/program"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/program"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/information"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/information"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>