<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="4dp"
    android:background="#BDBFC6"
    android:padding="5dp">

    <ImageView
        android:id="@+id/PerPhoto"
        android:layout_width="167dp"
        android:layout_height="254dp"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        app:srcCompat="@drawable/witness_prosecution"
        tools:ignore="RtlSymmetry"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/PerformanceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/PerPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp" />

    <!-- Info Stack (Icons + Texts) -->
    <LinearLayout
        android:id="@+id/infoStack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/PerformanceName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/PerPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp">

        <!-- Days -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:contentDescription="@string/days"
                android:src="@drawable/days" />
            <TextView
                android:id="@+id/Days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:contentDescription="@string/hours"
                android:src="@drawable/hours" />
            <TextView
                android:id="@+id/Time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Duration -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:contentDescription="@string/duration"
                android:src="@drawable/duration" />
            <TextView
                android:id="@+id/Duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Theater Room -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:contentDescription="@string/theaterroom"
                android:src="@drawable/theater" />
            <TextView
                android:id="@+id/TheaterRoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Performance Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:contentDescription="@string/type"
                android:src="@drawable/theatremask" />
            <TextView
                android:id="@+id/PerformanceType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>